enum Role {
  STUDENT
  VENDOR
  ADMIN
}

enum OrderStatus {
  PENDING
  PAID
  SHIPPED
  DELIVERED
}

Table User {
  user_id Varchar(9) [pk]
  email Text [unique]
  password Text
  name Text
  role Role
  created_at DateTime [default: `now()`]
}

Table Vendor {
  vendor_id Text [pk, default: `uuid()`]
  user_id Text [unique, ref: > User.user_id]
  store_name Text
  bio Text [null]
  image_url Text [null]
}

Table Product {
  id Text [pk, default: `uuid()`]
  title Text
  description Text
  price Float
  quantity Int
  image_url Text
  vendor_d Text [ref: > Vendor.vendor_id]
  category_id Text [ref: > Category.category_id]
  created_at DateTime [default: `now()`]
}

Table Category {
  category_id String [pk, default: `uuid()`]
  name String [unique]
}

Table Order {
  order_id String [pk, default: `uuid()`]
  user_id String [ref: > User.user_id]
  total Float
  status OrderStatus
  created_at DateTime [default: `now()`]
}

Table OrderItem {
  id String [pk, default: `uuid()`]
  order_id String [ref: > Order.order_id]
  product_id String [ref: > Product.id]
  quantity Int
  price_at_purchase Float
}

Table Image {
  img_id String [pk, default: `uuid()`]
  url String
  product_id String [ref: > Product.id]
}
